--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.1.4",
     "axios": "^0.19.2",
     "leancloud-storage": "^4.5.3",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
