--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "pm2 serve ./build 3000"
+    "server": "pm2 serve ./build 3000 -n texas"
   },
   "eslintConfig": {
     "extends": "react-app"
