--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/big.js": "^4.0.5",
+    "@types/crypto-js": "^3.1.45",
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
     "@types/node": "^13.13.5",
@@ -14,6 +15,7 @@
     "@types/react-dom": "^16.9.8",
     "antd": "^4.1.4",
     "big.js": "^5.2.2",
+    "crypto-js": "^4.0.0",
     "leancloud-storage": "^4.5.3",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
