--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "antd": "^4.1.4",
     "big.js": "^5.2.2",
     "crypto-js": "^4.0.0",
@@ -21,6 +22,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.8.3"
   },
