--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^4.1.4",
     "big.js": "^5.2.2",
     "crypto-js": "^4.0.0",
+    "leancloud-realtime": "^5.0.0-rc.2",
     "leancloud-storage": "^4.5.3",
     "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
