--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/big.js": "^4.0.5",
     "@types/crypto-js": "^3.1.45",
+    "@types/diffie-hellman": "^5.0.0",
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
     "@types/node": "^13.13.5",
@@ -18,6 +19,7 @@
     "antd": "^4.1.4",
     "big.js": "^5.2.2",
     "crypto-js": "^4.0.0",
+    "diffie-hellman": "^5.0.3",
     "leancloud-realtime": "^5.0.0-rc.2",
     "leancloud-storage": "^4.5.3",
     "lodash": "^4.17.15",
